exports[`Event should render a formatted date if the blurb is undefined 1`] = `
<View
  style={
    Object {
      "alignItems": "flex-start",
      "backgroundColor": "#fff",
      "borderRadius": 4,
      "flexDirection": "row",
      "margin": 24,
      "marginTop": 0,
      "padding": 20,
      "paddingLeft": 16,
      "paddingRight": 16
    }
  }>
  <View
    style={
      Object {
        "backgroundColor": "#999",
        "borderRadius": 28,
        "height": 56,
        "marginRight": 16,
        "width": 56
      }
    }>
    <Image
      source={1} />
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "column"
      }
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
            "fontSize": 13,
            "textAlign": "center"
          },
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text_bold",
            "fontSize": 16,
            "fontWeight": "bold",
            "textAlign": "left"
          }
        ]
      }>
      pew pew pew
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
            "fontSize": 13,
            "textAlign": "center"
          },
          Object {
            "color": "#80979a",
            "fontSize": 15,
            "textAlign": "left"
          }
        ]
      }>
      Friday 16th, September 2016
    </Text>
  </View>
</View>
`;

exports[`Event should render the props 1`] = `
<View
  style={
    Object {
      "alignItems": "flex-start",
      "backgroundColor": "#fff",
      "borderRadius": 4,
      "flexDirection": "row",
      "margin": 24,
      "marginTop": 0,
      "padding": 20,
      "paddingLeft": 16,
      "paddingRight": 16
    }
  }>
  <View
    style={
      Object {
        "backgroundColor": "#999",
        "borderRadius": 28,
        "height": 56,
        "marginRight": 16,
        "width": 56
      }
    }>
    <Image
      source={1} />
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "column"
      }
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
            "fontSize": 13,
            "textAlign": "center"
          },
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text_bold",
            "fontSize": 16,
            "fontWeight": "bold",
            "textAlign": "left"
          }
        ]
      }>
      pew pew pew
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
            "fontSize": 13,
            "textAlign": "center"
          },
          Object {
            "color": "#80979a",
            "fontSize": 15,
            "textAlign": "left"
          }
        ]
      }>
      i am a blurb
    </Text>
  </View>
</View>
`;
